<resources>
    <string name="app_name">Elio</string>
    <string name="menu_course">概览</string>
    <string name="menu_select">筛选</string>
    <string name="course1">大学生心理健康</string>
    <string name="course2">西班牙语</string>
    <string name="course3">中国传统文化</string>
    <string name="search_hint">输入查找关键字</string>
    <string name="search">搜 索</string>
    <string name="science">科学技术</string>
    <string name="social">社会科学</string>
    <string name="culture">人文核心</string>
    <string name="welcome">  欢迎  </string>
</resources>
