<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background">
    <include
        android:id="@+id/header_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/course_search"
        android:layout_marginTop="15dp"></include>
    <!--滚动列表-->
    <LinearLayout
        android:id="@+id/course_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_search"
        android:orientation="vertical"
        android:background="#7BBFC0"
        android:gravity="center_horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/course1"
            android:textSize="20sp"
            android:textColor="#ffffff"
            />
        <View
            android:layout_width="250dp"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="#ffffff"></View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/science"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/course_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/course_1"
        android:orientation="vertical"
        android:background="#E59CA5"
        android:gravity="center_horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/course2"
            android:textSize="20sp"
            android:textColor="#ffffff"
            />
        <View
            android:layout_width="250dp"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="#ffffff"></View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/culture"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/course_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/course_2"
        android:orientation="vertical"
        android:background="#F6CF94"
        android:gravity="center_horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/course3"
            android:textSize="20sp"
            android:textColor="#ffffff"
            />
        <View
            android:layout_width="250dp"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="#ffffff"></View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/social"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/course_3"
        android:orientation="vertical"
        android:background="#7BBFC0"
        android:gravity="center_horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/course1"
            android:textSize="20sp"
            android:textColor="#ffffff"
            />
        <View
            android:layout_width="250dp"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="#ffffff"></View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/science"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/container_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:layout_alignParentBottom="true"
        >
        <LinearLayout
            android:id="@+id/menu_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            >
            <Button
                android:id="@+id/btn_course"
                android:layout_width="75dp"
                android:layout_height="30dp"
                android:background="@drawable/menu_course_iconclicked_selector"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_course"
                android:textColor="#000000"
                android:textSize="12sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/menu_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            >
            <Button
                android:id="@+id/btn_select"
                android:layout_width="73dp"
                android:layout_height="30dp"
                android:background="@drawable/menu_select_icon_selector"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_select"
                android:textColor="#000000"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>